syntax = "proto3";

package allnodes.v5;

// The Allnodes service
service AllnodesService {
  // GetBootstrapInfo returns information needed to bootstrap validator node
  rpc GetBootstrapInfo(BootstrapInfoRequest) returns (BootstrapInfoResponse) {}
}

// The bootstrap info request
message BootstrapInfoRequest {
  // Shred version
  uint32 shred_version = 1;
}

// The snapshot response
message BootstrapInfoResponse {
  // Best snapshot node, if any
  SnapshotNode node = 1;
  // Validator flags
  uint64 flags = 2;
  // Gossip node contact list encoded by bincode
  bytes contact_info = 3;
  // Constants
  repeated Constant constants = 4;
}

// The snapshot node
message SnapshotNode {
  // `SocketAddr` encoded by borsh
  bytes rpc = 1;
  // Pubkey of the RPC node in binary representation
  bytes pubkey = 2;
  // `SnapshotHash` encoded by borsh
  bytes snapshot_hash = 3;
  // Latency of the RPC request
  uint64 latency = 4;
}

// Constant
message Constant {
  // Constant name
  string name = 1;
  // Constant value
  string value = 2;
}
